<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/layoutMarginBig"
    android:layout_marginEnd="@dimen/layoutMarginBig"
    android:layout_marginBottom="@dimen/layoutMarginBig"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/darken"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMarginBig"
        android:layout_marginBottom="@dimen/layoutMarginMedium"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/dayPrev"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMarginBig"
            android:text="@string/tempPrev"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMarginBig"
            android:text="@string/longSummaryPrev"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintEnd_toStartOf="@+id/icon"
            app:layout_constraintStart_toEndOf="@+id/temp"
            app:layout_constraintTop_toTopOf="@+id/temp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/layoutMarginBig"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/temp"
            app:srcCompat="@drawable/clearnight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layoutMarginBig"
        android:layout_marginBottom="@dimen/layoutMarginBig"
        android:layout_marginEnd="@dimen/layoutMarginBig"
        android:text="@string/tempPrev"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMarginBig"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tempMax"
        app:layout_constraintTop_toTopOf="@+id/tempMax"
        app:layout_constraintVertical_bias="1.0">

        <net.azarquiel.darksky.view.TextFA
            app:textId="@+id/precipProbability"
            app:text="@string/precipProbabilityPrev"
            app:faIcon="@string/precipIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <net.azarquiel.darksky.view.TextFA
            app:textId="@+id/humidity"
            app:text="@string/humidityPrev"
            app:faIcon="@string/humidityIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <net.azarquiel.darksky.view.TextFA
            app:textId="@+id/windSpeed"
            app:text="@string/windSpeedPrev"
            app:faIcon="@string/windSpeedIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>