<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/layoutMarginBig"
    android:layout_marginEnd="@dimen/layoutMarginBig"
    android:layout_marginBottom="@dimen/layoutMarginBig"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/darken"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMarginMedium"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/hourPrev"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layoutMarginBig"
            android:text="@string/tempPrev"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMarginBig"
            android:text="@string/shortSummaryPrev"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintEnd_toStartOf="@+id/icon"
            app:layout_constraintStart_toEndOf="@+id/temp"
            app:layout_constraintTop_toTopOf="@+id/temp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/layoutMarginBig"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/temp"
            app:srcCompat="@drawable/clearnight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMarginMedium"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            style="@style/secondaryInfoText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/precipProbability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipProbabilityPrev" />

            <TextView
                style="@style/icon"
                android:text="@string/precipIcon" />
        </LinearLayout>

        <LinearLayout
            style="@style/secondaryInfoText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidityPrev" />

            <TextView
                style="@style/icon"
                android:text="@string/humidityIcon" />
        </LinearLayout>

        <LinearLayout
            style="@style/secondaryInfoText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeedPrev" />

            <TextView
                style="@style/icon"
                android:text="@string/windSpeedIcon" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>